// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="github-cfamily-example-repositories-box big-padded boxed-group test-class"
>
  <div
    className="display-flex-center"
  >
    <img
      alt=""
      className="spacer-right"
      height={20}
      src="/images/alm/github.svg"
    />
    <a
      className="spacer-left big"
      href="https://github.com/orgs/sonarsource-cfamily-examples/repositories?q=sq"
      rel="noopener noreferrer"
      target="_blank"
    >
      sonarsource-cfamily-examples
    </a>
  </div>
  <p
    className="spacer-top"
  >
    onboarding.tutorial.cfamily.examples_repositories_description
  </p>
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="github-cfamily-example-repositories-box big-padded boxed-group test-class"
>
  <div
    className="display-flex-center"
  >
    <img
      alt=""
      className="spacer-right"
      height={20}
      src="/images/alm/github.svg"
    />
    <a
      className="spacer-left big"
      href="https://github.com/orgs/sonarsource-cfamily-examples/repositories?q=sq+macos+azure"
      rel="noopener noreferrer"
      target="_blank"
    >
      sonarsource-cfamily-examples
    </a>
  </div>
  <p
    className="spacer-top"
  >
    onboarding.tutorial.cfamily.examples_repositories_description
  </p>
</div>
`;
